--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "pg": "^8.7.3"
+    "nanoid": "^3.3.2",
+    "pg": "^8.7.3",
+    "uuid": "^8.3.2"
   }
 }
