--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "express": "^4.17.3",
     "nanoid": "^3.3.2",
     "pg": "^8.7.3",
-    "uuid": "^8.3.2"
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2",
+    "yamljs": "^0.3.0"
   }
 }
