--- a/e-commerce/angular.json
+++ b/e-commerce/angular.json
@@ -28,11 +28,11 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "node_modules/primeflex/primeflex.css",
+              "src/styles.scss",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/bootstrap4-dark-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "src/styles.scss"
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           },
